--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -172,7 +172,7 @@ body{
 }
 
 .total_summary{
-	margin-right: 10px !important;
+	margin-right: 80px !important;
 }
 
 /* modal confirm */
@@ -260,8 +260,8 @@ textarea{
 	font-size: 16px;
 }
 
-.modal-xl{
-	width: 1000px !important;
+.modal-dialog.modal-xl{
+	max-width: 1000px !important;
 }
 
 #customer_detail_modal input{
@@ -291,4 +291,31 @@ input[type='date']{
 
 .croppie-container .cr-slider-wrap{
 	margin-top: 0px !important;
+}
+
+.notavailable{
+	cursor: not-allowed;
+	text-decoration: line-through;
+	color: #cd5b5b;
+}
+
+span.span_seperator{
+	width: 20px;
+	display: block;
+	border: 1px solid #fff;
+	visibility: hidden
+}
+
+#copy_details{
+	margin-bottom: 10px;
+	padding: 10px 20px 10px 20px;
+	border-radius: 10px;
+	border: 1px solid #c1c1c1;
+	font-size: 20px;
+}
+
+textarea#clipboard{
+	position: absolute;
+	z-index: -9999;
+	opacity: 0;
 }
