--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 500px) {
 	.product_cont{
-		width: 130px;
+		/* width: 130px; */
 		min-height: 120px;
 		border: 1px solid #CCC;
 		border-radius: 10px;
@@ -19,7 +19,7 @@
 
 	.inpqty{
 		margin-top: 10px;
-		width: 130px;
+		/* width: 130px; */
 		text-align: right;
 		font-size: 20px;
 		color: #000;
@@ -73,7 +73,7 @@
 
 @media only screen and (min-width: 1026px) {
 	.product_cont{
-		width: 200px;
+		/* width: 200px; */
 		border: 1px solid #CCC;
 		border-radius: 10px;
 		min-height: 150px;
@@ -92,9 +92,9 @@
 
 	.inpqty{
 		margin-top: 10px;
-		width: 200px;
+		/* width: 200px; */
 		text-align: right;
-		font-size: 15px;
+		font-size: 16px;
 		color: #000;
 		font-weight: bold;
 	}
@@ -104,7 +104,7 @@
 		padding: 10px;
 		border-radius: 10px;
 		border: 1px solid #c1c1c1;
-		width: 400px;
+		width: 98%;
 		font-size: 20px;
 	}
 
@@ -161,7 +161,7 @@ body{
 }
 
 #productsummary{
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 
@@ -173,74 +173,74 @@ body{
 }
 
 .total_summary{
-	margin-right: 80px !important;
+	/* margin-right: 80px !important; */
 }
 
 /* modal confirm */
 .modal-confirm {
-color: #636363;
-width: 400px;
+	color: #636363;
+	width: 400px;
 }
 .modal-confirm .modal-content {
-padding: 20px;
-border-radius: 5px;
-border: none;
+	padding: 20px;
+	border-radius: 5px;
+	border: none;
 	text-align: center;
-font-size: 14px;
+	font-size: 14px;
 }
 .modal-confirm .modal-header {
-border-bottom: none;
+	border-bottom: none;
 	position: relative;
 }
 .modal-confirm h4 {
-text-align: center;
-font-size: 26px;
-margin: 0px 0 -10px;
+	text-align: center;
+	font-size: 26px;
+	margin: 0px 0 -10px;
 }
 .modal-confirm .close {
 	position: absolute;
-top: -5px;
-right: -2px;
+	top: -5px;
+	right: -2px;
 }
 .modal-confirm .modal-body {
-color: #999;
+	color: #999;
 }
 .modal-confirm .modal-footer {
-border: none;
-text-align: center;
-border-radius: 5px;
-font-size: 13px;
-padding: 10px 50px 25px;
+	border: none;
+	text-align: center;
+	border-radius: 5px;
+	font-size: 13px;
+	padding: 10px 50px 25px;
 }
 .modal-confirm .modal-footer a {
-color: #999;
+	color: #999;
 }
 .modal-confirm .icon-box {
-width: 80px;
-height: 80px;
-margin: 0 auto;
-border-radius: 50%;
-z-index: 9;
-text-align: center;
+	width: 80px;
+	height: 80px;
+	margin: 0 auto;
+	border-radius: 50%;
+	z-index: 9;
+	text-align: center;
 }
 .modal-confirm .icon-box i {
-font-size: 46px;
-display: inline-block;
-margin-top: 13px;
+	font-size: 46px;
+	display: inline-block;
+	margin-top: 13px;
 }
 .modal-confirm .btn {
-color: #fff;
-border-radius: 4px;
-background: #60c7c1;
-text-decoration: none;
-transition: all 0.4s;
-line-height: normal;
-min-width: 120px;
-border: none;
-min-height: 40px;
-border-radius: 3px;
-margin: 0 5px;
-outline: none !important;
+	color: #fff;
+	border-radius: 4px;
+	background: #60c7c1;
+	text-decoration: none;
+	transition: all 0.4s;
+	line-height: normal;
+	min-width: 120px;
+	border: none;
+	min-height: 40px;
+	border-radius: 3px;
+	margin: 0 5px;
+	outline: none !important;
 }
 .modal-confirm .btn-info {
 	background: #c1c1c1;
@@ -319,4 +319,20 @@ textarea#clipboard{
 	position: absolute;
 	z-index: -9999;
 	opacity: 0;
+}
+
+.product_cont {
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+}
+
+#sidebar-wrapper {
+	height: 100vh;
+	width: 400px;
+}
+
+
+@media only screen and (min-width: 500px) {
+
 }
