--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -38,6 +38,14 @@ html{
 	font-size: 20px;
 }
 
+#status_btn{
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid #c1c1c1;
+	width: 200px;
+	font-size: 20px;
+}
 
 /*#product_list_btn, .route_btn {
 	margin-bottom: 10px;
@@ -98,7 +106,8 @@ textarea{
 	cursor: pointer;
 }
 
-#cancel_orderlist_btn, #pending_order_btn, .lg-btn {
+/* #pending_order_btn, */
+#cancel_orderlist_btn, .lg-btn {
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 10px;
@@ -107,7 +116,7 @@ textarea{
 	font-size: 20px;
 }
 
-#print_order_btn, #void_order_btn, #paid_order_btn{
+#print_order_btn, #void_order_btn, #paid_order_btn, #unpaid_order_btn{
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 10px;
@@ -116,7 +125,7 @@ textarea{
 	font-size: 20px;
 }
 
-#process_order_btn, #complete_order_btn, #update_order_btn{
+/*#process_order_btn, #complete_order_btn,*/ #update_order_btn{
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 10px;
