--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -29,7 +29,7 @@ html{
 	font-size: 20px;
 }
 
-#report_btn{
+#report_btn, #filter_btn{
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 10px;
