--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -332,6 +332,15 @@ textarea#clipboard{
 	width: 400px;
 }
 
+#left-sidebar-wrapper {
+	height: 100vh;
+	width: 400px;
+}
+
+.main_product{
+	display: none;
+}
+
 
 @media only screen and (min-width: 500px) {
 
