--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -120,7 +120,7 @@ textarea{
 	font-size: 20px;
 }
 
-#print_order_btn, #void_order_btn, #paid_order_btn, #unpaid_order_btn{
+#void_order_btn, #paid_order_btn, #unpaid_order_btn{ /*#print_order_btn,*/
 	margin-bottom: 10px;
 	padding: 10px;
 	border-radius: 10px;
