--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -415,3 +415,14 @@ td#payment_method_td{
 	line-height: 44px;
 }
 
+#current_logged_user{
+	margin-bottom: 10px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid #d8d8d8;
+	width: 300px;
+	font-size: 20px;
+	text-align: center;
+	background: #f2f2f2;
+}
+
