--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -417,10 +417,9 @@ td#payment_method_td{
 
 #current_logged_user{
 	margin-bottom: 10px;
-	padding: 10px;
+	padding: 10px 25px 10px 25px;
 	border-radius: 10px;
 	border: 1px solid #d8d8d8;
-	width: 300px;
 	font-size: 20px;
 	text-align: center;
 	background: #f2f2f2;
