--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -77,6 +77,7 @@
 		margin-bottom: -8px;
 		color: #505050;
 		font-size: 12px;
+		padding-right: 15px;
 	}
 }
 
@@ -159,6 +160,7 @@
 		margin-bottom: -8px;
 		color: #505050;
 		font-size: 13px;
+		padding-right: 15px;
 	}
 }
 
