--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -12,7 +12,7 @@
 		text-align: center;
 	}
 
-	.product_price{
+	.p_price{
 		font-size: 18px;
 		text-align: center;
 	}
@@ -95,7 +95,7 @@
 		text-align: center;
 	}
 
-	.product_price{
+	.p_price{
 		font-size: 30px;
 		text-align: center;
 	}
