--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -442,7 +442,7 @@ td#payment_method_td{
 	background: #f2f2f2;
 }
 
-#driver_name_grp{
+#driver_name_grp, #date_delivered_grp{
 	display: none;
 }
 
