--- a/assets/app/orderlist.css
+++ b/assets/app/orderlist.css
@@ -483,3 +483,7 @@ table#orderlist_table tr .hide_column{
 	margin-left: -75px;
 	margin-top: -20px;
 }
+
+#payment_check_detail, #payment_check_detail_update{
+	display: none;
+}
