--- a/assets/app/order/dashboard.css
+++ b/assets/app/order/dashboard.css
@@ -238,4 +238,12 @@ textarea#clipboard{
 	overflow: hidden;
 }
 
+.img-placeholder {
+	background-image: url("../img/noimg.png");
+	background-color: #80808026;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 202px;
+	border-bottom:1px solid rgba(0,0,0,.125)
+}
 
