--- a/assets/app/order/purchases.css
+++ b/assets/app/order/purchases.css
@@ -90,3 +90,17 @@ body {
 .order-card {
 	cursor: pointer
 }
+
+
+.img-placeholder {
+	background-image: url("../img/noimg.png");
+	background-color: #80808026;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+	height: 102px;
+	border:1px solid rgba(0,0,0,.125);
+	width: 100px;
+}
+
+
